<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/login_screen"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?colorPrimary">

  <LinearLayout
    android:layout_width="@dimen/login_form_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingEnd="@dimen/spacing_large"
    android:paddingStart="@dimen/spacing_large"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="@dimen/login_logo_max_height"
      android:layout_marginBottom="@dimen/spacing_large"
      android:layout_marginTop="@dimen/spacing_large"
      android:layout_weight="1"
      android:contentDescription="@null"
      android:src="@drawable/monzo_logo_with_name" />

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="0">

      <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
          android:id="@+id/log_in"
          style="@style/Widget.AppCompat.Button.Colored"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/spacing_large"
          android:text="@string/log_in"
          android:textColor="@android:color/white" />

        <Button
          android:id="@+id/sign_up"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/spacing_large"
          android:text="@string/sign_up"
          android:textColor="?colorAccent" />
      </LinearLayout>

      <ProgressBar
        android:id="@+id/loading"
        android:layout_width="@dimen/loading_spinner_size"
        android:layout_height="@dimen/loading_spinner_size"
        android:layout_gravity="center"
        android:indeterminate="true" />

      <LinearLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:padding="@dimen/spacing_large"
          android:text="@string/login_error"
          android:textColor="@android:color/white"
          android:textSize="16sp" />

        <Button
          android:id="@+id/retry"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/spacing_large"
          android:text="@string/try_again"
          android:textColor="?colorAccent" />
      </LinearLayout>
    </FrameLayout>
  </LinearLayout>
</FrameLayout>
